app/assets/stylesheets/api/stories.scss
// Place all the styles related to the Api::Stories controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


.feed {
  width: 1000px;
  margin: 0 auto;
  margin-top: 75px;
  font-family: 'Titillium Web';
}

.feedItem {
  margin-bottom: 100px;
  display: inline-block;
  width: 1000px;
  height: 700px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

@keyframes fadeInFromBottom {
  0% { transform: translateY(50px); opacity: 0 }
  100% { transform: translateY(0); opacity: 1 }
}

.storyInfo {
  margin-top: 560px;
  padding-top: 40px;
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 40px;
  display:flex;
  justify-content: space-between;
  align-items: flex-end;
}

.feedItem .description {
  position: static;
}

.feedItem .imageContainer {
  position: absolute;
  background-color: grey;
  width: 1000px;
  height: 560px;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.feedItem img {
  width: 1000px;
}

.feedItem .author {
  font-size: 20px;
  text-align: right;
}

.description h2 {
  font-size: 32px;
  font-weight: 700;
  font-family: 'PT Sans';
  color: black;
}

.description span {
  display: block;
  margin-top: 10px;
  font-size: 18px;
  color: black;
}

.story {
  width: 1000px;
  margin: 0 auto;
  padding: 40px;
  background-color: white;
  font-size: 20px;
}

.story h1 {
  font-family: 'PT Sans';
  margin-top: 20px;
  font-size: 50px;
  font-weight: bold;
  text-align: center;
}

.story h3 {
  margin-top: 10px;
  font-family: 'Georgia';
  font-size: 28px;
  text-align: center;
  color: grey;
  font-weight: 100;
}

.story .body {
  font-family: 'Georgia';
}

.story .imageContainer {
  position: absolute;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right:auto;
  width: 850px;
  height: 476px;
  overflow: hidden;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.story img {
  display: block;
  margin: 0 auto;
  width: 850px;
}

.story .authorWidget {
  margin-top: 20px;
  margin-bottom: 50px;
  font-family: "Titillium Web";
  font-size: 24px;
  text-align: center;
}

.story figure {
  margin-top: 30px;
  margin-bottom: 40px;
}

.story p, .story span {
  width: 700px;
  margin: 0 auto;
  font-size: 24px;
}

.story .body {
  margin-top: 40px;
  margin-bottom: 60px;
}

.storyForm {
  width: 700px;
  margin: 0 auto;
}

.storyForm input {
  margin-top: 10px;
  margin-bottom: 10px;
  width: 700px;
  padding: 7px;
}

.storyForm textarea {
  margin-top: 10px;
  margin-bottom: 20px;
}

.storyForm .link {
  font-size: 20px;
  display: block;
  text-align: right;
}

